-----2.11.0 () -----
New features:
	* [general]
		* New application theme "Dracula"
		* New option in the application settings to run a selected CAS engine at startup
		* Share the project via email, Nextcloud, etc. directly from the main menu
	* [worksheet]
		* Add possibility to use column labels as axis ticks
		* New visualization types:
			* Lollipop plot
			* Q-Q plot
			* KDE plot
		* New worksheet theme "Dracula"
		* Add possibility to lock elements for unintentional change in the plot
	* [spreadsheet]
		* Spreadsheet linking - allow to synchronize number of rows across multiple spreadsheets
		* Extended search and replace
		* Column statistics spreadsheet - child spreadsheet showing various statistical properties of the parent spreadsheet
		* Remove/mask rows with missing values
		* Allow to sort the whole spreadsheet even if one single column was selected, use it rather as the key sort column
		* When generating values via a mathematical expression ("generate function values"), allow to use variables in CAS-notebooks as source columns
		* Generatation of equidistant values: support for Date&Time and integer columns
		* Generatation of equidistant values: allow to fix the number of values and the increment at the same time
	* [notebook]
		* Export to PDF
		* "Configure CAS" in the menu to create a new notebook to directly allow the user to enable new backends in case not done yet
		* In case the correct path to a CAS like Maxima, etc. was configured, allow to use it without restarting LabPlot
	* [import]
		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
		* Support data import from ODS (Open Document Spreadsheet) files
		* Addeded seaborn's datasets to the collection of datasets

Performance improvements:
	* Make baseline removal much faster by using Eigen3 library (optional dependency)
	* Refactor formula parsing including better error handling

Bug fixes: