@@ -16,8 +16,11 @@
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QListWidget" name="lwPreview">
+     <property name="movement">
+      <enum>QListView::Static</enum>
+     </property>
      <property name="isWrapping" stdset="0">
-      <bool>false</bool>
+      <bool>true</bool>
      </property>
      <property name="viewMode">
       <enum>QListView::IconMode</enum>
