@@ -5,6 +5,7 @@ New features:
 		* New option in the application settings to run a selected CAS engine at startup
 		* Share the project via email, Nextcloud, etc. directly from the main menu
 	* [worksheet]
+		* Preview panel for all available worksheets in the project
 		* Add possibility to use column labels as axis ticks
 		* New visualization types:
 			* Lollipop plot
